objects/Assessment_Package__c.object
<CustomObject>
    <fields>
        <fullName>Able_to_extract_sold_data_from_provider__c</fullName>
        <inlineHelpText>Full Question: Do you anticipate being able to extract sold data from your current provider?</inlineHelpText>
        <label>Able to extract sold data from provider</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Project__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Project__r.Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_Address__c</fullName>
        <formula>Project__r.Account__r.ShippingStreet &amp; &quot;, &quot; &amp; BR() &amp; 
Project__r.Account__r.ShippingCity &amp; &quot;, &quot; &amp;
Project__r.Account__r.ShippingState &amp; &quot;, &quot; &amp; BR() &amp; 
Project__r.Account__r.ShippingPostalCode &amp; &quot;, &quot; &amp; BR() &amp; 
Project__r.Account__r.ShippingCountry</formula>
        <label>Account Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessment Packages</relationshipLabel>
        <relationshipName>Assessment_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Administrator_Settings_Email__c</fullName>
        <label>Administrator Settings-Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Administrator_Settings_Name__c</fullName>
        <inlineHelpText>Verification of Dealer hours, Road to the Sale, IP filtering, etc.  These are all of your “set it and forget it” settings.</inlineHelpText>
        <label>Administrator Settings-Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Administrator_Settings_Phone__c</fullName>
        <label>Administrator Settings-Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Administrator_Settings_Title__c</fullName>
        <label>Administrator Settings-Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_sales_team_under_specific_managers__c</fullName>
        <label>Are sales team under specific managers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_part_of_a_Dealer_Group__c</fullName>
        <label>Are you part of a Dealer Group?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>AP Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_How_many_appts_do_you_set_in_a_day__c</fullName>
        <inlineHelpText>Full Question: On average, how many appointments do you set in a day?</inlineHelpText>
        <label>Avg. How many appts do you set in a day</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_Unit_Sales_Last_12mon_New__c</fullName>
        <inlineHelpText>Please provide the average monthly unit sales for the last 12 months (New)</inlineHelpText>
        <label>Avg Monthly Unit Sales-Last 12mon (New)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Monthly_Unit_Sales_Last_12mon_Used__c</fullName>
        <inlineHelpText>Please provide the average monthly unit sales for the last 12 months-USED</inlineHelpText>
        <label>Avg Monthly Unit Sales-Last 12mon (Used)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BDCM_Verification_Participation__c</fullName>
        <label>BDCM Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BDC_Manager_Cell__c</fullName>
        <label>BDC Manager Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BDC_Manager_Email__c</fullName>
        <label>BDC Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BDC_Manager_Name__c</fullName>
        <label>BDC Manager Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BDC_Manager_Phone__c</fullName>
        <label>BDC Manager Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BDC_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDC Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages (BDC Manager)</relationshipLabel>
        <relationshipName>Assessment_Packages7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDC_work_leads_for_more_than_1_location__c</fullName>
        <label>BDC work leads for more than 1 location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Basic_Inventory_Feed_DMS_Recommended__c</fullName>
        <inlineHelpText>If other, fill in next question.</inlineHelpText>
        <label>Basic Inventory Feed (DMS Recommended)</label>
        <picklist>
            <picklistValues>
                <fullName>Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealertrack DMS (Arkona)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealerbuilt (Lightyear)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quorum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Basic_Inventory_Feed_Other_3rd_Party__c</fullName>
        <label>Basic Inventory Feed-Other 3rd Party</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Can_salespeople_view_vehicle_cost__c</fullName>
        <label>Can salespeople view vehicle cost</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carfax_Password__c</fullName>
        <label>Carfax Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carfax_Username__c</fullName>
        <label>Carfax Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages</relationshipLabel>
        <relationshipName>Assessment_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_New__c</fullName>
        <inlineHelpText>Pricing (can be different for New and Pre-Owned)</inlineHelpText>
        <label>Cost (New)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Pre_Owned__c</fullName>
        <label>Cost (Pre-Owned)</label>
        <picklist>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage in VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diamond Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCarlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chroma Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other 3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Vendors__c</fullName>
        <label>Current Vendors</label>
        <picklist>
            <picklistValues>
                <fullName>ADP Web Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocar (AutoLand) *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdWizard *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Auto Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel.com (AutoWeb)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoConX.com (MinnesotaCars/HoosierAuto)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoExtra.com New Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autojini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoLeap.com (42 Media)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMart.com (AutoMercado) *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMart.com New Cars *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive.com *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoNetUSA.com *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoPho.com *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSales.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoScoop New *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoScoop Used *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoShopper.com *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSMART (Ryan Tech Inc.)(CUDL) *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader.com *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader.com New Cars *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV (nj.com)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarFax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarQuotes.com *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com New Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarsDirect.com (Ryan Tech) *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Shoppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarsMagazine.com (Dealer Source) *</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarSmartz.com *</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Custom_Form_Verification_Email__c</fullName>
        <label>Custom Form Verification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Custom_Form_Verification_Name__c</fullName>
        <label>Custom Form Verification Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Form_Verification_Phone__c</fullName>
        <label>Custom Form Verification Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Custom_Form_Verification_Title__c</fullName>
        <label>Custom Form Verification Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Data_Verification_Email__c</fullName>
        <label>Customer Data Verification-Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Data_Verification_Name__c</fullName>
        <label>Customer Data Verification-Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Data_Verification_Phone__c</fullName>
        <label>Customer Data Verification-Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Data_Verification_Title__c</fullName>
        <label>Customer Data Verification-Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Administrator_Email__c</fullName>
        <label>DMS Administrator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DMS_Administrator_Name__c</fullName>
        <label>DMS Administrator Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Administrator_Phone__c</fullName>
        <label>DMS Administrator Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DMS_F_I_Accounts_connecting_to__c</fullName>
        <label># DMS F&amp;I Accounts connecting to</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_provider_changing_indicate_mon_yr__c</fullName>
        <inlineHelpText>If DMS provider will change within one year, Month/Year must be provided.</inlineHelpText>
        <label>DMS provider changing, indicate mon/yr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DP_Verification_Participation__c</fullName>
        <label>DP Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Principal_Cell__c</fullName>
        <label>Dealer Principal Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealer_Principal_Email__c</fullName>
        <label>Dealer Principal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Principal_Name__c</fullName>
        <label>Dealer Principal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Principal_Phone__c</fullName>
        <label>Dealer Principal Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Friday_Bodyshop__c</fullName>
        <inlineHelpText>Dealership Hours on Friday</inlineHelpText>
        <label>Dealership Hours on Friday: Bodyshop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Friday_Parts__c</fullName>
        <inlineHelpText>Dealership Hours on Friday</inlineHelpText>
        <label>Dealership Hours on Friday: Parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Friday_Service__c</fullName>
        <inlineHelpText>Dealership Hours on Friday</inlineHelpText>
        <label>Dealership Hours on Friday: Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Friday_Showroom__c</fullName>
        <inlineHelpText>Dealership Hours on Friday</inlineHelpText>
        <label>Dealership Hours on Friday: Showroom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Saturday_Bodyshop__c</fullName>
        <inlineHelpText>Dealership Hours on Saturday</inlineHelpText>
        <label>Dealership Hours on Saturday: Bodyshop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Saturday_Parts__c</fullName>
        <inlineHelpText>Dealership Hours on Saturday</inlineHelpText>
        <label>Dealership Hours on Saturday: Parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Saturday_Service__c</fullName>
        <inlineHelpText>Dealership Hours on Saturday</inlineHelpText>
        <label>Dealership Hours on Saturday: Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Saturday_Showroom__c</fullName>
        <inlineHelpText>Dealership Hours on Saturday</inlineHelpText>
        <label>Dealership Hours on Saturday: Showroom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Sunday_Bodyshop__c</fullName>
        <inlineHelpText>Dealership Hours on Sunday</inlineHelpText>
        <label>Dealership Hours on Sunday: Bodyshop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Sunday_Parts__c</fullName>
        <inlineHelpText>Dealership Hours on Sunday</inlineHelpText>
        <label>Dealership Hours on Sunday: Parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Sunday_Service__c</fullName>
        <inlineHelpText>Dealership Hours on Sunday</inlineHelpText>
        <label>Dealership Hours on Sunday: Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Sunday_Showroom__c</fullName>
        <inlineHelpText>Dealership Hours on Sunday</inlineHelpText>
        <label>Dealership Hours on Sunday: Showroom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Thursday_Bodyshop__c</fullName>
        <inlineHelpText>Dealership Hours on Thursday</inlineHelpText>
        <label>Dealership Hours on Thursday: Bodyshop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Thursday_Parts__c</fullName>
        <inlineHelpText>Dealership Hours on Thursday</inlineHelpText>
        <label>Dealership Hours on Thursday: Parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Thursday_Service__c</fullName>
        <inlineHelpText>Dealership Hours on Thursday</inlineHelpText>
        <label>Dealership Hours on Thursday: Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Thursday_Showroom__c</fullName>
        <inlineHelpText>Dealership Hours on Thursday</inlineHelpText>
        <label>Dealership Hours on Thursday: Showroom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Tuesday_Bodyshop__c</fullName>
        <inlineHelpText>Dealership Hours on Tuesday</inlineHelpText>
        <label>Dealership Hours on Tuesday: Bodyshop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Tuesday_Parts__c</fullName>
        <inlineHelpText>Dealership Hours on Tuesday</inlineHelpText>
        <label>Dealership Hours on Tuesday: Parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Tuesday_Service__c</fullName>
        <inlineHelpText>Dealership Hours on Tuesday</inlineHelpText>
        <label>Dealership Hours on Tuesday: Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Wednesday_Bodyshop__c</fullName>
        <inlineHelpText>Dealership Hours on Wednesday</inlineHelpText>
        <label>Dealership Hours on Wednesday: Bodyshop</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Wednesday_Parts__c</fullName>
        <inlineHelpText>Dealership Hours on Wednesday</inlineHelpText>
        <label>Dealership Hours on Wednesday: Parts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Wednesday_Service__c</fullName>
        <inlineHelpText>Dealership Hours on Wednesday</inlineHelpText>
        <label>Dealership Hours on Wednesday: Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Hours_on_Wednesday_Showroom__c</fullName>
        <inlineHelpText>Dealership Hours on Wednesday</inlineHelpText>
        <label>Dealership Hours on Wednesday: Showroom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Goals_for_Sales_Staff__c</fullName>
        <inlineHelpText>If you set goals for your Sales Staff, please describe.</inlineHelpText>
        <label>Describe Goals for Sales Staff</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeskM_Verification_Participation__c</fullName>
        <label>DeskM Verification Participation</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Form Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desking Configuration/Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Processes/Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Userlist</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Desking_Configuration_Settings_Email__c</fullName>
        <description>This contact person needs to be someone in the finance department that is desking deals on a daily basis.  This person should be familiar with your deal jacket as we will be reviewing our standard forms to include on your account, as well as determining which forms should be mapped as a custom form (if any).  This contact will need to be familiar with your DMS desking settings, taxes, accessories, days to first payment, etc.  We will ask them to supply several recently cashed deals so we can enter test deals in VIN and make sure everything balances for customer proposals through VIN.</description>
        <inlineHelpText>(Finance and Desking Manager required to validate)</inlineHelpText>
        <label>Desking Configuration/Settings Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Desking_Configuration_Settings_Name__c</fullName>
        <description>This contact person needs to be someone in the finance department that is desking deals on a daily basis.  This person should be familiar with your deal jacket as we will be reviewing our standard forms to include on your account, as well as determining which forms should be mapped as a custom form (if any).  This contact will need to be familiar with your DMS desking settings, taxes, accessories, days to first payment, etc.  We will ask them to supply several recently cashed deals so we can enter test deals in VIN and make sure everything balances for customer proposals through VIN.</description>
        <inlineHelpText>(Finance and Desking Manager required to validate)</inlineHelpText>
        <label>Desking Configuration/Settings Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desking_Configuration_Settings_Phone__c</fullName>
        <description>This contact person needs to be someone in the finance department that is desking deals on a daily basis.  This person should be familiar with your deal jacket as we will be reviewing our standard forms to include on your account, as well as determining which forms should be mapped as a custom form (if any).  This contact will need to be familiar with your DMS desking settings, taxes, accessories, days to first payment, etc.  We will ask them to supply several recently cashed deals so we can enter test deals in VIN and make sure everything balances for customer proposals through VIN.</description>
        <inlineHelpText>(Finance and Desking Manager required to validate)</inlineHelpText>
        <label>Desking Configuration/Settings Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Desking_Configuration_Settings_Title__c</fullName>
        <description>This contact person needs to be someone in the finance department that is desking deals on a daily basis.  This person should be familiar with your deal jacket as we will be reviewing our standard forms to include on your account, as well as determining which forms should be mapped as a custom form (if any).  This contact will need to be familiar with your DMS desking settings, taxes, accessories, days to first payment, etc.  We will ask them to supply several recently cashed deals so we can enter test deals in VIN and make sure everything balances for customer proposals through VIN.</description>
        <inlineHelpText>(Finance and Desking Manager required to validate)</inlineHelpText>
        <label>Desking Configuration/Settings Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desking_Manager_Cell__c</fullName>
        <label>Desking Manager Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Desking_Manager_Email__c</fullName>
        <label>Desking Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Desking_Manager_Name__c</fullName>
        <label>Desking Manager Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desking_Manager_Phone__c</fullName>
        <label>Desking Manager Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Desking_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Desking Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment Packages (Desking Manager)</relationshipLabel>
        <relationshipName>Assessment_Packages2aEO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Salespeople_cross_sell_at_other_locat__c</fullName>
        <inlineHelpText>Full Question: Do your salespeople cross sell at any other location?</inlineHelpText>
        <label>Do Salespeople cross sell at other locat</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>